--- a/Movie Recommendation System.ipynb
+++ b/Movie Recommendation System.ipynb
@@ -171,7 +171,7 @@
         "import os\n",
         "import streamlit as st\n",
         "\n",
-        "API_KEY = \"AIzaSyC7bxmhGIlNx7av7OJXcxW5SkL5hINq9Es\"\n",
+        "API_KEY = \"paste_your_api_key here\"\n",
         "\n",
         "def main():\n",
         "    path = \"/content/drive/MyDrive/movie_review/movies.csv\"  # path to csv file of movies\n",
